--- a/cadastrar.html
+++ b/cadastrar.html
@@ -24,7 +24,7 @@
         <div class="form-control">
             <div class="form-control-inside">
           <label for="email">E-mail:</label>
-          <input type="email" id="email" name="email" />
+          <input type="text" id="email" name="email" required />
         </div>
         <div class="form-control-inside">
           <label for="servidor">Servidor:</label>
