Atualizar o exibir.html

--- a/exibir.html
+++ b/exibir.html
@@ -45,7 +45,7 @@
             <input type="text" id="edit-other-problemaResumido" required />
 
             <label for="edit-other-email">E-mail:</label>
-            <input type="email" id="edit-other-email" required />
+            <input type="text" id="edit-other-email" required />
 
             <label for="edit-other-servidor">Servidor:</label>
             <select id="edit-other-servidor" required>
