--- a/exibir.html
+++ b/exibir.html
@@ -6,6 +6,7 @@
     <title>Exibir Demandas</title>
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/exibir.css" />
+<link rel="stylesheet" href="style/media.css" />
   </head>
   <body>
     <div class="container">
