feat: search input

--- a/exibir.html
+++ b/exibir.html
@@ -11,6 +11,8 @@
   <body>
     <div class="container">
       <a href="index.html" class="voltar">Voltar</a>
+
+      <input type="text" id="search-input" class="pesquisa" placeholder="Buscar problema">
       
       <h1 class="title">Demandas cadastradas</h1>
 
