feat: contador e input usuario

--- a/cadastrar.html
+++ b/cadastrar.html
@@ -13,6 +13,13 @@
       <a href="index.html" class="voltar">Voltar</a>
       <h1 class="title">Nova Demanda</h1>
       <form id="demanda-form">
+        <label for="usuario">Usuário:</label>
+        <input
+          type="text"
+          id="usuario"
+          name="usuario"
+          required
+        />
         <label for="problemaResumido">Problema Resumido:</label>
         <input
           type="text"
