--- a/exibir.html
+++ b/exibir.html
@@ -14,7 +14,7 @@
 
       <input type="text" id="search-input" class="pesquisa" placeholder="Buscar problema">
       
-      <h1 class="title">Demandas cadastradas</h1>
+      <h1 class="title">Demandas cadastradas <span id="totalDemandas"></span></h1>
 
       <p id="edit-message" class=""></p>
 
