fix: media.css filter status

--- a/exibir.html
+++ b/exibir.html
@@ -26,26 +26,27 @@
       <p id="edit-message" class=""></p>
 
       <div class="filtroContainer">
+        <span id="openFiltro"><ion-icon id="filtroIcon" name="menu-outline"></ion-icon></span>
         <h4>Filtro</h4>
         <div class="filtro-control">
-          <input type="checkbox" name="todos" id="filtroTodos" checked/>
-          <p>Todos (<span id="contadorTodos"></span>)</p> 
+          <input type="checkbox" name="todos" id="filtroTodos" checked />
+          <p>Todos (<span id="contadorTodos"></span>)</p>
         </div>
         <div class="filtro-control">
           <input type="checkbox" name="cadastrado" id="filtroCadastrado" />
-          <p>Cadastrado  (<span id="contadorCadastrado"></span>)</p>
+          <p>Cadastrado (<span id="contadorCadastrado"></span>)</p>
         </div>
         <div class="filtro-control">
           <input type="checkbox" name="enviado" id="filtroEnviado" />
-          <p>Enviado  (<span id="contadorEnviado"></span>)</p>
+          <p>Enviado (<span id="contadorEnviado"></span>)</p>
         </div>
         <div class="filtro-control">
           <input type="checkbox" name="verificando" id="filtroVerificando" />
-          <p>Verificando  (<span id="contadorVerificando"></span>)</p>
+          <p>Verificando (<span id="contadorVerificando"></span>)</p>
         </div>
         <div class="filtro-control">
           <input type="checkbox" name="corrigido" id="filtroCorrigido" />
-          <p>Corrigido  (<span id="contadorCorrigido"></span>)</p>
+          <p>Corrigido (<span id="contadorCorrigido"></span>)</p>
         </div>
       </div>
 
@@ -122,6 +123,14 @@
         </div>
       </div>
     </div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <script type="module" src="javascript/exibir.js"></script>
     <script src="javascript/filtro.js"></script>
   </body>
