fix: search placeholder

--- a/exibir.html
+++ b/exibir.html
@@ -16,7 +16,7 @@
         type="text"
         id="search-input"
         class="pesquisa"
-        placeholder="Buscar problema"
+        placeholder="Buscar..."
       />
 
       <h1 class="title">
